Enhance fullscreen modal functionality and adjust media sizing. Ensure modal is appended to body for proper z-index and update CSS for media elements in fullscreen view.

--- a/assets/product-main-section.css
+++ b/assets/product-main-section.css
@@ -636,10 +636,13 @@ body.modal-open_new {
   position: relative;
   margin-bottom: 20px;
 }
+.fullscreen-main-area_new img,
+.fullscreen-main-area_new video {
+  max-width: 45%!important;
 
+}
 .fullscreen-image_new {
-  max-width: 90%;
-  max-height: 90%;
+
   object-fit: contain;
   border-radius: 8px;
   user-select: none;
